2000-07-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getcwd.c: Correct last patch.
	Patch by Greg McGary <greg@mcgary.org>.

	* io/Makefile (tests): Add tst-getcwd.
	* io/tst-getcwd.c: New file.

2000-07-15  Jakub Jelinek  <jakub@redhat.com>

	* gconv_open (__gconv_open): Initialize whole __gconv_trans_data
	structure.

2000-07-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/sysconf.c: Undef __sysconf before weak_alias.
	* sysdeps/unix/bsd/getpt.c: Undef __getpt before weak_alias.

2000-07-12  H.J. Lu  <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/ia64/Versions (libc): Add __clone2 to
	GLIBC_2.2.
	* sysdeps/unix/sysv/linux/ia64/Dist: Add clone2.S.
	* sysdeps/unix/sysv/linux/ia64/Makefile [$(subdir)=misc]
	(sysdep-routines): Add clone2.
	* sysdeps/unix/sysv/linux/ia64/clone2.S: New.

2000-07-13  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/clone.S: New file.
	* sysdeps/unix/sysv/linux/ia64/fork.c: New file.

2000-06-05  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h: New file
	based on sysdeps/unix/sysv/linux/bits/siginfo.h.
	Change type of si_band from "int" to "long".
	(si_imm) [USE_GNU]: Define
	(si_isr) [USE_GNU]: Ditto.
	(ILL_BREAK) [USE_GNU]: Ditto.
	(FPE_DECOVF) [USE_GNU]: Ditto.
	(FPE_DECDIV) [USE_GNU]: Ditto.
	(FPE_DECERR) [USE_GNU]: Ditto.
	(FPE_INVASC) [USE_GNU]: Ditto.
	(FPE_INVDEC) [USE_GNU]: Ditto.
	(TRAP_BRANCH) [USE_GNU]: Ditto.
	(TRAP_HWBKPT) [USE_GNU]: Ditto.

2000-07-06  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/sys/ucontext.h: Do not include
	bits/sigcontext as struct mcontext does not depend on it.

	* sysdeps/unix/sysv/linux/ia64/bits/sigcontext.h: New file.

2000-07-04  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/shmctl.c: Removed.

2000-07-04  David Mosberger-Tang  <davidm@hpl.hp.com>

	* sysdeps/unix/sysv/linux/ia64/bits/msq.h: New file.

2000-06-22  Jes Sorensen  <jes@linuxcare.com>
