@@ -6,6 +6,8 @@
 	* io/Makefile (tests): Add tst-getcwd.
 	* io/tst-getcwd.c: New file.
 
+	* io/Makefile: Rewrite rules to avoid running ftwtest unless necessary.
+
 2000-07-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* gconv_open (__gconv_open): Initialize whole __gconv_trans_data
